--- a/src/component/CulturePage/Showcase/style.css
+++ b/src/component/CulturePage/Showcase/style.css
@@ -7,7 +7,7 @@
   font-family: "Space Mono 700";
   font-style: normal;
   font-size: 48px;
-  margin-top: 375px;
+  margin-top: 335px;
   text-transform: uppercase;
   color: #187dff;
   text-align: left;
